force-app/main/default/objects/payment_schedule__dll/payment_schedule__dll.object-meta.xml
<CustomObject>
    <label>payment_schedule</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>