force-app/main/default/objects/payment_schedule__dll/fields/payment_amount__c.field-meta.xml
<CustomField>
    <fullName>payment_amount__c</fullName>
    <label>payment_amount</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>payment_amount</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>